2006-04-11  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/signal/filter.cpp, itpp/signal/filter.h: Fixed bug
	[1468011], so AR_Filter now works when using a single coefficient
	value, e.g. a = "0.5". Minor cosmetic changes applied by the way.

2006-04-10  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/comm/convcode.cpp, itpp/comm/convcode.h,
	tests/convcode_test.cpp, tests/convcode_test.ref: Fixed improper
	behaviour of the encode_trunc() and decode_trunc() functions. Now,
	each execution of these functions does not reset the encoder and
	decoder states, so it can be used to perform continous decoding
	process. An additional reset() function has been added to reset
	the encoder and decoder states.

2006-04-07  Adam Piatyszek  <ediap@users.sourceforge.net>

	* doc/local/verification.doc, doc/local/installation.doc: Minor
	documentation updates.

2006-04-05  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/itcomm.h, itpp/itfixed.h, itpp/itprotocol.h,
	itpp/itsignal.h, itpp/itsrccode.h: Readded inclusion of dependent
	header files (`itpp/itbase.h' or `itpp/itsignal.h').

2006-04-04  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/jv.cpp, itpp/base/scalfunc.cpp,
	itpp/base/scalfunc.h: Fixed lgamma() and gamma() functions
	definitions for	MSVC++ .NET.

2006-04-03  Adam Piatyszek  <ediap@users.sourceforge.net>

	* itpp/base/bessel/airy.cpp, itpp/base/bessel/chbevl.cpp,
	itpp/base/bessel.cpp, itpp/base/bessel/hyperg.cpp,
	itpp/base/bessel/i0.cpp, itpp/base/bessel/i1.cpp,
	itpp/base/bessel/iv.cpp, itpp/base/bessel/jv.cpp,
	itpp/base/bessel/k0.cpp, itpp/base/bessel/k1.cpp,
	itpp/base/bessel/kn.cpp, itpp/base/bessel/polevl.cpp,
	itpp/base/bessel/struve.cpp: Fixed a problem with a few Bessel
	functions provided by <cmath> under MSVC++ (different naming
	conventions). BTW, file headers updated.

	* itpp/itbase.h: Minor fix - including `itmisc.h' file.

2006-03-31  Adam Piatyszek  <ediap@users.sourceforge.net>
